# dimadem-workshop

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml  tach.toml
.claude/: settings.json
.claude/skills/brainstorm/: SKILL.md
.claude/skills/to-issues/: SKILL.md
.claude/skills/to-prd/: SKILL.md
brushes/: __init__.py
canvas/: canvas.html
materials/: run-ralph.sh
materials/issues/0001-local-live-canvas-viewer/: 001-mvp-live-viewer-ws-and-30fps-render.md  002-artist-filter-dropdown.md  003-handle-clear-reset-state.md
materials/prd/: 0001-local-live-canvas-viewer.md
painting/: __init__.py
palette/: __init__.py
tests/server/: conftest.py  test_canvas.py  test_viewer.py
